--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 nav ul {
     list-style: none;
     padding: 0;
+    background-color: #333;
 }
 
 nav ul li {
@@ -17,7 +18,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: black;
+    color: white;
     padding: 10px;
     transition: 0.3s;
 }
@@ -25,4 +26,5 @@ nav ul li a {
 nav ul li a:hover {
     background-color: lightblue;
     border-radius: 5px;
+    color: black;
 }
